--- a/src/styles/Class.scss
+++ b/src/styles/Class.scss
@@ -1,20 +1,28 @@
-.AddClass{
-    border: 1px solid red;
-    display: flex;
-    justify-content: center;
-    h2{
-        text-align: center;
-    }
 
+body{
+    background-color: $react-background;
+    color:$primary-color;
+    h2{
+        font-size: 2.5rem;
+    }
 form{
-    border: 1px solid black;
+    border: 1px solid $primary-color;
+    box-shadow: 2px 2px 5px 2px;
+    border-radius: 10px;;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 20%;
     margin-top: 2%;
+    padding: 1%;
     input, label{
-        margin-bottom: 1%;
+        margin-bottom: 2%;
+        color:$primary-color;
+        font-size: 1.2rem;
+    }
+    span{
+        padding: 10px;
     }
 }
 }
