fixed Login - added default export; format stylesheet

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,8 +1,7 @@
-  
 // master file
 @import "./index.scss";
 
 @import "./App.scss";
-@import './Header.scss';
-@import './Login.scss';
+@import "./Header.scss";
+@import "./Login.scss";
 @import "./Class.scss";
