--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -18,3 +18,34 @@ $react-link-color: #61dafb;
 .app-link {
   color: $react-link-color;
 }
+
+
+body {
+  // background: radial-gradient(#e5e5e5, #ffff, #e5e5e5);
+  // background-color: $react-background;
+  background-color: $primary-grey;
+  color:$primary-color;
+  h2 {
+      font-size: 2.5rem;
+  }
+  form {
+      border: 1px solid $primary-color;
+      box-shadow: 2px 2px 5px 2px;
+      border-radius: 10px;;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 20%;
+      margin-top: 2%;
+      padding: 1%;
+      input, label {
+          margin-bottom: 2%;
+          color:$primary-color;
+          font-size: 1.2rem;
+      }
+      span {
+          padding: 10px;
+      }
+  }
+}
