--- a/src/styles/Class.scss
+++ b/src/styles/Class.scss
@@ -1,27 +1,14 @@
-body {
-    background-color: $react-background;
-    color:$primary-color;
-    h2 {
-        font-size: 2.5rem;
-    }
-    form {
-        border: 1px solid $primary-color;
-        box-shadow: 2px 2px 5px 2px;
-        border-radius: 10px;;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 20%;
-        margin-top: 2%;
-        padding: 1%;
-        input, label {
-            margin-bottom: 2%;
-            color:$primary-color;
-            font-size: 1.2rem;
-        }
-        span {
-            padding: 10px;
-        }
-    }
+.card:hover {
+    box-shadow: 5px 10px 20px 1px rgba(0,0,0,0.3)!important
+}
+
+.card-img-top {
+    transform: scale(1);
+    transition: transform 0.5s ease;
+}
+.card-img-top:hover {
+    transform:scale(1.5)
+}
+.overflow {
+    overflow:hidden;
 }
