radio styling restart

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,5 +1,5 @@
 .app-header {
-    background-color: $primary-grey;
+    background-color: $primary-black;
     min-height: 8vh;
     display: flex;
     flex-direction: row;
