--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -30,16 +30,17 @@ body {
       font-size: 2.5rem;
   }
   form {
-      border: 1px solid $primary-color;
-      box-shadow: 2px 2px 5px 2px;
-      border-radius: 10px;;
+      // border: 1px solid $primary-color;
+      box-shadow: 1px 1px 3px 1px;
+      border-radius: 10px;
       margin: 0 auto;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
-      width: 20%;
-      margin-top: 2%;
-      padding: 1%;
+      margin: 2%;
+      padding: 2%;
+      max-width: 100%;
+      width: 95%;
       input, label {
           margin-bottom: 2%;
           color:$primary-color;
@@ -50,3 +51,4 @@ body {
       }
   }
 }
+
